--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -21,6 +21,9 @@ ktorServerCallLogging = "2.3.7"
 koin = "4.0.0"
 materialIconsExtended = "1.7.8"
 navigationCompose = "2.9.0"
+pagingCompose = "1.0.0-alpha20"
+pagingRuntime = "3.3.4"
+roomPaging = "2.6.1"
 securityCrypto = "1.1.0-alpha03"
 securityCryptoKtx = "1.1.0-alpha07"
 timber = "5.0.1"
@@ -40,6 +43,9 @@ workRuntimeKtx = "2.10.3"
 androidx-core = { module = "androidx.core:core", version.ref = "core" }
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
+androidx-paging-compose = { module = "androidx.paging:paging-compose", version.ref = "pagingCompose" }
+androidx-paging-runtime = { module = "androidx.paging:paging-runtime", version.ref = "pagingRuntime" }
+androidx-room-paging = { module = "androidx.room:room-paging", version.ref = "roomPaging" }
 androidx-security-crypto = { module = "androidx.security:security-crypto", version.ref = "securityCrypto" }
 androidx-work-runtime-ktx-v281 = { module = "androidx.work:work-runtime-ktx", version.ref = "workRuntimeKtx" }
 junit = { group = "junit", name = "junit", version.ref = "junit" }
